Se ajusta blopost más reciente para los div

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,16 @@
 <html>
     <head>
         <title>El Post</title>
-        <link rel="stylesheet" href="css/estilos.css" />
+        <link rel="stylesheet" href="estilos/Estilos.css" />
     </head>
     <body>
-        <h1>Aqui empieza este blog post</h1>
-        <p> Y este es un parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es un titulo atractivo e interesante</h1>
+                <p> Y este es un parrafo de inicio</p>
+            </div>
+        </div>
+        <!-- <h1>Aqui empieza este blog post</h1> -->
+        
     </body>
 </html>
