--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
     <body>
         <div id="container">
             <div id="post">
+                <div id="cabecera">
+                    Cabecera
+                </div>
                 <h1>Este es un titulo atractivo e interesante</h1>
                 <p> Y este es un parrafo de inicio</p>
             </div>
