--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="post">
                 <div id="cabecera">
-                    Cabecera
+                    Hyperblog <span id="tagline"> Tu blog de confianza </span>
                 </div>
                 <h1>Este es un titulo atractivo e interesante</h1>
                 <p> Y este es un parrafo de inicio</p>
