--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,12 @@
             <div id="post">
                 <h1>Este es un titulo atractivo e interesante</h1>
                 <p> Y este es un parrafo de inicio</p>
+                <p>
+
+                    Los blogs son la mejor frma de compartir información y tus ideas.
+                    Mucho mas que ir a conferencias a menos de que seas rockstar.
+                    Pero estadisticamente no lo eres...... Por ahora
+                </p>
             </div>
         </div>
         <!-- <h1>Aqui empieza este blog post</h1> -->
